finished community:group page and streamlned css for other pages. page is NOT responsive and will be done in future issue

--- a/client/src/components/Connections/Connections.css
+++ b/client/src/components/Connections/Connections.css
@@ -37,6 +37,8 @@
   font-size: 1rem;
   font-family: var(--default-font);
   text-align: center;
+  margin-top: -2px;
+  margin-bottom: 6px;
 }
 
 @media only screen and (max-width: 576px) {
