--- a/client/src/pages/ForumPage/ForumPage.css
+++ b/client/src/pages/ForumPage/ForumPage.css
@@ -6,6 +6,7 @@
   width: 100vw;
   height: 231px;
   background-color: var(--pink);
+  margin-bottom: -20px;
 }
 
 .ForumPage__header {
@@ -15,8 +16,12 @@
   padding: 20px 50px 0px 0px;
   margin: 0 auto;
   text-align: left;
-  padding-top: 50px;
-  padding-bottom: 20px;
+}
+
+.ForumPost__likes-comments {
+  margin-top: 20px;
+  position: absolute;
+  left: 50vw;
 }
 
 .ForumPage__button-container {
@@ -29,26 +34,24 @@
   margin: 10px 50px 30px 0px;
 }
 
+.forum-page-hollow-pill-container {
+  display: flex;
+  width: 95vw;
+  flex-wrap: wrap;
+}
+
+.forum-page-pill-container {
+  display: flex;
+  width: 95vw;
+  flex-wrap: wrap;
+}
+
 .forum-page-body {
   display: flex;
   justify-content: center;
   flex-direction: column;
   margin-left: 100px;
   padding-top: 50px;
-}
-
-.forum-page-pill-container {
-  display: flex;
-  flex-direction: row;
-  width: 95vw;
-  flex-wrap: wrap;
-}
-
-.forum-page-hollow-pill-container {
-  display: flex;
-  flex-direction: row;
-  width: 95vw;
-  flex-wrap: wrap;
 }
 
 .secondNav {
@@ -80,6 +83,16 @@
   margin-top: 70px;
   margin-left: -100px;
   margin-right: 120px;
+}
+
+.ForumPost__top-middle {
+  margin-bottom: 20px;
+  padding-bottom: 30px;
+  background-color: #fafafa;
+}
+
+.ForumPost__bottom {
+  margin-top: -20px;
 }
 
 .hashtag_mediaCard {
@@ -171,8 +184,17 @@
   line-height: 27px;
 }
 
+.InputTextField__container--search {
+  margin-top: -10px;
+}
+
+.Modal__container {
+  margin-top: 15px;
+}
+
 .Banner_topic {
   line-height: 0px;
+  margin-bottom: -16px;
 }
 
 @media only screen and (max-width: 320px) {
